Card: fixed image cutoff issue

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -152,7 +152,7 @@ h2 {
 
 #card-container {
   width: 100%;
-  height: 500px;
+  height: 700px;
   padding: 20px;
   position: relative;
   color: #fff;
